# git-switch

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  config.rs  lib.rs  main.rs  menu.rs  repo.rs  util.rs
